--- a/index.jade
+++ b/index.jade
@@ -4,7 +4,7 @@ script(type='text/javascript', src='/app/app.js')
 
 body(ng-app='app')
     .container
-        h1 Find a Job Today!
+        h1 Find a Job Now!
         div(ng-controller='testCtrl')
             .list-group
                 a.list-group-item(href='#')(ng-repeat="job in jobs")
