missy job go go

--- a/index.jade
+++ b/index.jade
@@ -6,7 +6,7 @@ script(type='text/javascript', src='/app/app.js')
 
 body(ng-app='app')
     .container
-        h1 Find a Job Now!
+        h1 Missy Job Go Go!
         div(ng-controller='testCtrl')
             .list-group
                 a.list-group-item(href='#')(ng-repeat="job in jobs")
